fix: navbar z-index

--- a/src/components/Navbar/Navbar.sass
+++ b/src/components/Navbar/Navbar.sass
@@ -5,6 +5,7 @@
   align-items: center
   padding: 35px 50px
   background-color: $primary-color
+  z-index: 2
   .icon
     display: none
   @media (max-width: 992px)
